@@ -21,7 +21,7 @@ EXTRA_DIST = \
 	README \
 	COPYING \
 	COPYING-DOCS \
-	COPYING.LIBGLABELS \
+	COPYING-LIBGLABELS \
 	AUTHORS \
 	ChangeLog \
 	INSTALL \
