@@ -4,28 +4,32 @@ AC_PREREQ(2.52)
 
 AC_INIT(glabels, 2.3.pre0svn, http://sourceforge.net/tracker/?func=add&group_id=46122&atid=445116)
 AC_CONFIG_SRCDIR(src/glabels.c)
+
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
-GNOME_DOC_INIT
 
 AM_MAINTAINER_MODE
-AM_CONFIG_HEADER(config.h)
+m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
 
-AC_PROG_INTLTOOL([0.21])
+AC_CONFIG_HEADERS(config.h)
+
+IT_PROG_INTLTOOL([0.21])
+
 PKG_PROG_PKG_CONFIG
 
-AM_PROG_LIBTOOL
+AC_PROG_LIBTOOL
+
+GNOME_DOC_INIT
+GTK_DOC_CHECK(1.0)
 
 AC_ISC_POSIX
 AC_PROG_CC
-AM_PROG_CC_STDC
-AC_HEADER_STDC
+AC_PROG_INSTALL
 
 GNOME_COMPILE_WARNINGS
 
-AC_PATH_PROG(GLIB_GENMARSHAL, glib-genmarshal)
-AC_PATH_PROG(GTK_BUILDER_CONVERT, gtk-builder-convert)
+AC_PATH_PROG(GLIB_GENMARSHAL,    glib-genmarshal)
+AC_PATH_PROG(GDK_PIXBUF_CSOURCE, gdk-pixbuf-csource)
 
-GTK_DOC_CHECK(1.0)
 
 dnl ---------------------------------------------------------------------------
 dnl - LIBGLABELS API versioning
@@ -53,10 +57,10 @@ AC_SUBST(LIBGLABELS_VERSION_INFO)
 dnl ---------------------------------------------------------------------------
 dnl - Library dependencies
 dnl ---------------------------------------------------------------------------
-GLIB_REQUIRED=2.18.0
-GTK_REQUIRED=2.14.0
+GLIB_REQUIRED=2.20.0
+GTK_REQUIRED=2.16.0
 LIBXML_REQUIRED=2.7.0
-LIBEBOOK_REQUIRED=2.24.0
+LIBEBOOK_REQUIRED=2.26.0
 
 dnl Make above strings available for packaging files (e.g. rpm spec files)
 AC_SUBST(GLIB_REQUIRED)
@@ -189,7 +193,6 @@ data/dtd/Makefile
 data/man/Makefile
 po/Makefile.in
 help/Makefile
-help/C/Makefile
 docs/Makefile
 docs/libglabels/Makefile
 glabels.spec
