@@ -1,4 +1,27 @@
 <SECTION>
+<FILE>xml-paper</FILE>
+lgl_xml_paper_read_papers_from_file
+lgl_xml_paper_parse_papers_doc
+lgl_xml_paper_parse_paper_node
+</SECTION>
+
+<SECTION>
+<FILE>enums</FILE>
+lglUnitsType
+</SECTION>
+
+<SECTION>
+<FILE>xml-category</FILE>
+lgl_xml_category_read_categories_from_file
+lgl_xml_category_parse_categories_doc
+lgl_xml_category_parse_category_node
+</SECTION>
+
+<SECTION>
+<FILE>libglabels</FILE>
+</SECTION>
+
+<SECTION>
 <FILE>db</FILE>
 lglDbRegStatus
 lgl_db_init
@@ -34,46 +57,6 @@ lgl_db_print_known_papers
 lgl_db_print_known_categories
 lgl_db_print_known_templates
 lgl_db_print_aliases
-</SECTION>
-
-<SECTION>
-<FILE>xml</FILE>
-LGL_XML_NAME_SPACE
-lgl_xml_get_prop_string
-lgl_xml_get_prop_i18n_string
-lgl_xml_get_prop_double
-lgl_xml_get_prop_boolean
-lgl_xml_get_prop_int
-lgl_xml_get_prop_uint
-lgl_xml_get_prop_length
-lgl_xml_set_prop_string
-lgl_xml_set_prop_double
-lgl_xml_set_prop_boolean
-lgl_xml_set_prop_int
-lgl_xml_set_prop_uint_hex
-lgl_xml_set_prop_length
-lgl_xml_is_node
-lgl_xml_get_node_content
-lgl_xml_set_default_units
-</SECTION>
-
-<SECTION>
-<FILE>xml-template</FILE>
-lgl_xml_template_read_templates_from_file
-lgl_xml_template_parse_templates_doc
-lgl_xml_template_parse_template_node
-lgl_xml_template_write_templates_to_file
-lgl_xml_template_write_template_to_file
-lgl_xml_template_create_template_node
-</SECTION>
-
-<SECTION>
-<FILE>libglabels</FILE>
-</SECTION>
-
-<SECTION>
-<FILE>enums</FILE>
-lglUnitsType
 </SECTION>
 
 <SECTION>
@@ -135,25 +118,42 @@ lgl_template_markup_free
 </SECTION>
 
 <SECTION>
-<FILE>xml-paper</FILE>
-lgl_xml_paper_read_papers_from_file
-lgl_xml_paper_parse_papers_doc
-lgl_xml_paper_parse_paper_node
-</SECTION>
-
-<SECTION>
-<FILE>xml-category</FILE>
-lgl_xml_category_read_categories_from_file
-lgl_xml_category_parse_categories_doc
-lgl_xml_category_parse_category_node
-</SECTION>
-
-<SECTION>
 <FILE>category</FILE>
 lglCategory
 lgl_category_new
 lgl_category_dup
 lgl_category_free
+</SECTION>
+
+<SECTION>
+<FILE>xml</FILE>
+LGL_XML_NAME_SPACE
+lgl_xml_get_prop_string
+lgl_xml_get_prop_i18n_string
+lgl_xml_get_prop_double
+lgl_xml_get_prop_boolean
+lgl_xml_get_prop_int
+lgl_xml_get_prop_uint
+lgl_xml_get_prop_length
+lgl_xml_set_prop_string
+lgl_xml_set_prop_double
+lgl_xml_set_prop_boolean
+lgl_xml_set_prop_int
+lgl_xml_set_prop_uint_hex
+lgl_xml_set_prop_length
+lgl_xml_is_node
+lgl_xml_get_node_content
+lgl_xml_set_default_units
+</SECTION>
+
+<SECTION>
+<FILE>xml-template</FILE>
+lgl_xml_template_read_templates_from_file
+lgl_xml_template_parse_templates_doc
+lgl_xml_template_parse_template_node
+lgl_xml_template_write_templates_to_file
+lgl_xml_template_write_template_to_file
+lgl_xml_template_create_template_node
 </SECTION>
 
 <SECTION>
