@@ -1,9 +1,0 @@
-figdir = figures
-docname = glabels
-lang = C
-omffile = glabels-C.omf
-entities = legal.xml
-
-include $(top_srcdir)/xmldocs.make
-dist-hook: app-dist-hook
-
